# mesh-hackathon

./: .gitignore  README.md  product_id_category.csv  product_id_url.csv  pyproject.toml  requirements.txt
chatbot/: __init__.py  chat_gpt_interface.py
data/: Fact1.txt  Fact2.txt  Fact3.txt  index.json
data_crawling/: create_image_csv.py  create_name_id_csv.py  load_images.py  request_raw_data.py  test_data.py
data_processed/: 000645.txt  001483.txt  001491.txt  001497.txt  001498.txt  001499.txt  001506.txt  001509.txt  001539.txt  004283.txt  008660.txt  008661.txt  008662.txt  008663.txt  008691.txt  008693.txt  008694.txt  008695.txt  008889.txt  013330.txt  014319.txt  014320.txt  014570.txt  014804.txt  014806.txt  015015.txt  015016.txt  015017.txt  015018.txt  015019.txt  015021.txt  015068.txt  015069.txt  015070.txt  015076.txt  015081.txt  015082.txt  015093.txt  015158.txt  015903.txt  (+8001 more)
flagged/: log.csv
mappings/: product_id_category.csv
mesh-hackathon/: audio_interface.py  chat_gpt_interface.py  data_processing.py  request_raw_data.py
mesh_heckathon.egg-info/: PKG-INFO  SOURCES.txt
raw_data/1001340176/: 1001340176.json
raw_data/1001340472/: 1001340472.json
raw_data/1001340745/: 1001340745.json
raw_data/1001341446/: 1001341446.json
raw_data/1001342438/: 1001342438.json
test/: 001253.txt  001490.txt  001492.txt  001493.txt  001494.txt  001495.txt  001507.txt  001508.txt  001536.txt  001537.txt  001538.txt  001680.txt  004285.txt  004286.txt  008690.txt  008692.txt  008696.txt  015014.txt
tools/: Dataloader.ipynb  download_embedding.sh
(+8944 files in other folders)
