[tool.poetry]
name = "mesh_hackaton"
version = "0.1.0"
description = "Object Detection Abstract Base Class for ArmarX"
authors = ["Timo Birr <timo.birr@student.kit.edu>", "Tim Zechmeister <tim@zechmeister-net.de>"]
maintainers = ["Timo Birr <timo.birr@student.kit.edu>", "Tim Zechmeister <tim@zechmeister-net.de>"]
packages = [{include = "chatbot"},{include = "data_crawling"}]

readme = "README.md"
repository = "https://github.com/timo-birr/mesh-hackathon"
classifiers = [
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = ">=3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
